# face_detect_eval

./: 1.mat  README.md  evaluation.py  evaluation_copy.py  evaluation_test.py  gen_val_txt.py  save_prediction.py  write_mat_file.py
docker-training/: Dockerfile  README.md  requirements.txt
face_detection/: evaluation.py
face_detection/t_retina_ncnn_mobilenetv2/: CMakeLists.txt  anchor_generator.cpp  config.h  face_recognition.h  results.txt
face_detection/t_retina_ncnn_mobilenetv2/ncnn/include/ncnn/: platform.h
face_detection/t_retina_onnxruntime_pytorch_resnet50/: CMakeLists.txt  landmark.py  landmark_widerface.py  main.py  results.txt  utils.h
face_detection/t_retina_pytorch_mobilenetv2/: main.py  results.txt
face_detection/t_retina_pytorch_resnet50/: results.txt  test_widerface.py
face_detection/t_scrfd_onnxruntime_cpp/: main.py  results.txt
face_detection/t_scrfd_onnxruntime_python/: landmark.py  landmark_widerface.py  main.py  results.txt  scrfd.py  wider_face.py
face_detection/t_srcfd/: main.py  scrfd.py
face_detection/yoloface/: main.py  result.txt
face_recognition/arc_face_resnet100/: IJB_11.py  embedding.py  result.txt  test.py
face_recognition/arc_face_resnet100_insightface/: IJB_11.py  embedding.py
face_recognition/arc_face_resnet100_insightface_R50/: IJB_11.py  embedding.py
face_recognition/arc_face_resnet100_insightface_R50/face_detection/: main.py  retinaface.py
face_recognition/arc_face_resnet100_vts/: IJB_11.py  embedding.py  result.txt  test.py
t_centerface/: centerface.py  main.py
t_centerface/prediction/0--Parade/: 0_Parade_Parade_0_102.txt  0_Parade_Parade_0_12.txt  0_Parade_Parade_0_120.txt  0_Parade_Parade_0_125.txt  0_Parade_Parade_0_137.txt  0_Parade_Parade_0_164.txt  0_Parade_Parade_0_194.txt  0_Parade_Parade_0_205.txt  0_Parade_Parade_0_218.txt  0_Parade_Parade_0_239.txt  0_Parade_Parade_0_247.txt  0_Parade_Parade_0_266.txt  0_Parade_Parade_0_275.txt  0_Parade_Parade_0_286.txt  0_Parade_Parade_0_288.txt  0_Parade_Parade_0_29.txt  0_Parade_Parade_0_317.txt  0_Parade_Parade_0_353.txt  0_Parade_Parade_0_364.txt  0_Parade_Parade_0_376.txt  0_Parade_Parade_0_377.txt  0_Parade_Parade_0_382.txt  0_Parade_Parade_0_429.txt  0_Parade_Parade_0_43.txt  0_Parade_Parade_0_443.txt  0_Parade_Parade_0_459.txt  0_Parade_Parade_0_461.txt  0_Parade_Parade_0_465.txt  0_Parade_Parade_0_468.txt  0_Parade_Parade_0_470.txt  0_Parade_Parade_0_472.txt  0_Parade_Parade_0_478.txt  0_Parade_Parade_0_490.txt  0_Parade_Parade_0_502.txt  0_Parade_Parade_0_519.txt  0_Parade_Parade_0_53.txt  0_Parade_Parade_0_545.txt  0_Parade_Parade_0_559.txt  0_Parade_Parade_0_611.txt  0_Parade_Parade_0_616.txt  (+73 more)
t_centerface/prediction/1--Handshaking/: 1_Handshaking_Handshaking_1_107.txt  1_Handshaking_Handshaking_1_134.txt  1_Handshaking_Handshaking_1_158.txt  1_Handshaking_Handshaking_1_209.txt  1_Handshaking_Handshaking_1_236.txt  1_Handshaking_Handshaking_1_275.txt  1_Handshaking_Handshaking_1_313.txt  1_Handshaking_Handshaking_1_314.txt  1_Handshaking_Handshaking_1_343.txt  1_Handshaking_Handshaking_1_35.txt  1_Handshaking_Handshaking_1_356.txt  1_Handshaking_Handshaking_1_357.txt  1_Handshaking_Handshaking_1_411.txt  1_Handshaking_Handshaking_1_453.txt  1_Handshaking_Handshaking_1_457.txt  1_Handshaking_Handshaking_1_465.txt  1_Handshaking_Handshaking_1_522.txt  1_Handshaking_Handshaking_1_567.txt  1_Handshaking_Handshaking_1_579.txt  1_Handshaking_Handshaking_1_602.txt  1_Handshaking_Handshaking_1_664.txt  1_Handshaking_Handshaking_1_733.txt  1_Handshaking_Handshaking_1_762.txt  1_Handshaking_Handshaking_1_766.txt  1_Handshaking_Handshaking_1_781.txt  1_Handshaking_Handshaking_1_801.txt  1_Handshaking_Handshaking_1_827.txt  1_Handshaking_Handshaking_1_94.txt
t_centerface/prediction/10--People_Marching/: 10_People_Marching_People_Marching_10_People_Marching_People_Marching_10_240.txt  10_People_Marching_People_Marching_10_People_Marching_People_Marching_10_368.txt  10_People_Marching_People_Marching_10_People_Marching_People_Marching_10_447.txt  10_People_Marching_People_Marching_10_People_Marching_People_Marching_10_499.txt  10_People_Marching_People_Marching_10_People_Marching_People_Marching_10_524.txt  10_People_Marching_People_Marching_10_People_Marching_People_Marching_10_552.txt  10_People_Marching_People_Marching_10_People_Marching_People_Marching_10_69.txt  10_People_Marching_People_Marching_10_People_Marching_People_Marching_10_848.txt  10_People_Marching_People_Marching_2_1046.txt  (+45 more)
t_retina_ncnn_mobilenetv2/: CMakeLists.txt  CMakeListsDuong.txt  anchor_generator.h  config.cpp  face_recognition.h  main.cpp  main.py
t_retina_ncnn_mobilenetv2/ncnn/: install_manifest.txt
t_retina_onnxruntime_pytorch_resnet50/: CMakeLists.txt  FaceDetection.h  FaceDetector.cpp  FaceDetector.h  main.cpp  results.txt  utils.h
t_retina_pytorch_resnet50/: results.txt
test_centerface/: test_widerface.py
tools/: README.md  face_alignment.py  face_masker.py  gen_mask.py  scrfd.py  scrfd_2.5g_bnkps_shape320x320.onnx  scrfd_2.5g_bnkps_shape640x640.onnx  scrfd_500m_bnkps_shape320x320.onnx
tools/logs/: sdk.log.1  sdk.log.2  sdk.log.3
widerface_val_TEST/: 1.txt  wider_val.txt
z/0--Parade/: 0_Parade_marchingband_1_104.txt  0_Parade_marchingband_1_20.txt  0_Parade_marchingband_1_74.txt
z/24--Soldier_Firing/: 24_Soldier_Firing_Soldier_Firing_24_10.txt  24_Soldier_Firing_Soldier_Firing_24_1037.txt  24_Soldier_Firing_Soldier_Firing_24_931.txt
z/40--Gymnastics/: 40_Gymnastics_Gymnastics_40_1035.txt  40_Gymnastics_Gymnastics_40_1043.txt  40_Gymnastics_Gymnastics_40_1044.txt
(+2854 files in other folders)
